#2459 Tidy up DB migration